# Retail-IQ

./: .gitignore  CLAUDE.original.md  README.md  REFLECTIONS.md  SPEC.md  preprocessing_log.txt  pyproject.toml  requirements.txt
.agents/skills/research-analysis/: SKILL.md
.claude/: settings.local.json
docs/: Literature_Review_30_Papers.md  Literature_Review_IEEE.md  Methodology.md  Paper_Division.html  Paper_Division.md  Project_slides.html  SPOT_CRITIQUE.md  Smart_Retail_Demand_Forecasting_Roadmap.md  project_summary.md  slides.md
notebooks/: advanced_models.ipynb  baseline_models.ipynb  cannibalization.ipynb  eda.ipynb  evaluation.ipynb
src/retail_iq/: __init__.py  config.py  evaluation.py  features.py  models.py  preprocessing.py  visualization.py
